c4prj2_input/grade.txt
Grading at Thu Mar 11 15:04:07 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:16:25: error: expected ‘)’ before ‘{’ token
   while (j < strlen(str){
                         ^
input.c:24:1: error: expected expression before ‘}’ token
 }
 ^
input.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
